--- a/css/small.css
+++ b/css/small.css
@@ -1,10 +1,18 @@
 nav {
-	float: left;
+	/*float: left;*/
 	margin-left: 0;
 	padding-left: 0;
 }
 
+nav li {
+  display: inline-block;
+  margin-left: 40px;
+  padding-top: 23px;
+
+  position: relative; 
+}
+
 
 .icon {
-	padding-left: 100px;
+	padding-left: 160px;
 }
