--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ p {
   line-height: 25px;
 }
 
+
 .container {
 	width: 100%;
 	margin: 0 auto;
@@ -21,6 +22,7 @@ p {
 /* Navigation Bar*/
 header {
   background: white;
+  overflow: hidden;
 }
 
 header::after {
@@ -98,7 +100,7 @@ nav a:hover::before {
 
 .aboutme {
   width: 100%;
-  height: 500px;
+  height: 600px;
   background: #222;
   color: white;
   
@@ -106,7 +108,7 @@ nav a:hover::before {
 #bodyheader {
   float: left;
   width: 90%;
-  padding-top: 40px;
+  padding-top: 120px;
   padding-left: 80px;
 }
 
@@ -142,7 +144,7 @@ nav a:hover::before {
 
 #socialtext {
   float: left;
-  padding-top: 20px;
+  padding-top: 0;
   padding-right: 80px;
   width: 600px;
 }
@@ -159,6 +161,11 @@ nav a:hover::before {
   width: 100%;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 
 
 
